Fix sticky positoned elements on mobile

--- a/styles/layout/horizontal_toolbar.scss
+++ b/styles/layout/horizontal_toolbar.scss
@@ -23,6 +23,9 @@
 // Toolbar
 .toolbar {
   .toolbar-bar {
+    position: fixed;
+    left: 0;
+    width: 100%;
     background: #100f10;
     box-shadow: none;
 
